# foosdk

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
cmake/: Sources.cmake  foosdkConfig.cmake.in  install.cmake  sources.cmake
